<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintParentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="28dp"
        app:cardBackgroundColor="@color/background_view_holder"
        app:cardCornerRadius="8dp"
        app:strokeColor="@color/grey_border"
        app:strokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/constraintContentLayout"
                app:layout_constraintStart_toStartOf="@+id/constraintContentLayout">

                <TextView
                    android:id="@+id/authorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/default_text_author"
                    android:fontFamily="@font/comfortaa_light"
                    android:textColor="@color/white"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeMinTextSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/createdPublText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/default_text_created"
                    android:fontFamily="@font/comfortaa_light"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/authorText" />

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/text_title_background"
                    android:padding="10dp"
                    android:text="@string/default_text_title"
                    android:fontFamily="@font/comfortaa_light"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/upsText"
                    app:layout_constraintEnd_toStartOf="@+id/constraintContentLayout"
                    app:layout_constraintStart_toEndOf="@+id/upsText"
                    app:layout_constraintTop_toBottomOf="@+id/authorText"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/upsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/default_text_ups"
                    android:fontFamily="@font/comfortaa_light"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@+id/authorText"
                    app:layout_constraintTop_toBottomOf="@+id/authorText" />

                <TextView
                    android:id="@+id/numCommentsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/default_text_comments"
                    android:fontFamily="@font/comfortaa_light"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/authorText"
                    app:layout_constraintTop_toBottomOf="@+id/titleText" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintContentLayout"
                    android:layout_width="82dp"
                    android:layout_height="78dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#344"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/titleText">

                    <ImageView
                        android:id="@+id/thumbnailImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>